--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,15 @@
-name: Build Entlehnlist
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀 # {{github.actor }} -> .env variablen
-on: [push] # wann soll der job gestartet werden
-jobs: # jobs sind verschiedene maschinen -backend, -frontend 
-  build:
+name: Java HelloWorld action
+run-name: ${{ github.actor }} has tested helloWorld in java
+on: [push]
+jobs:
+  hello-world:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin' # See 'Supported distributions' for available options
-        java-version: '17'
-    - run: java HelloWorldApp.java
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          check-latest: true
+      - run: javac HelloWorld.java
+      - run: java HelloWorld
